--- a/style-views.css
+++ b/style-views.css
@@ -76,7 +76,7 @@
 }
 .spotlight-memory-item small {
     display: block;
-    color: #777;
+    color: #ffffff;
     margin-bottom: 3px;
     font-weight: bold;
     font-size: 11px;
