--- a/style-modals.css
+++ b/style-modals.css
@@ -496,16 +496,17 @@
 .modal-section.modal-divider {
     padding: 0;
     height: 1px;
-    border-bottom: 1px solid #b0b0b0; 
-    box-shadow: 0 1px 1px rgba(0,0,0,0.15); 
+    border-bottom: 0px solid #b0b0b0; 
+    box-shadow: 0 0px 0px rgba(0,0,0,0.15); 
     margin: 10px 0 15px 0; 
 }
 .modal-section h3, .modal-section h4 {
     color: #4a5462;
     text-shadow: 0 1px 0 rgba(255,255,255,0.6);
     padding-bottom: 5px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 0px solid #ddd;
     margin-top: 0;
+    margin: 5px;
     margin-bottom: 10px;
 }
 .modal-section label {
