--- a/style-modals.css
+++ b/style-modals.css
@@ -418,7 +418,7 @@
     font-size: 13px;
     color: #aaa;
     text-shadow: 0 1px 0 rgba(0,0,0,0.6);
-    padding: 10px 15px 0 15px;
+    padding: 10px 15px 10px 15px;
     text-align: left;
     margin: 0;
 }
